WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286390
Fix IPInt JITless wasm->wasm and wasm->JS
https://bugs.webkit.org/show_bug.cgi?id=286390
Summary
Fix IPInt JITless wasm->wasm and wasm->JS
daniel_liu4
Reported
2025-01-22 16:41:16 PST
IPInt had a few small things missing that meant it couldn't interface with JITless Wasm correctly.
rdar://143149120
Attachments
Add attachment
proposed patch, testcase, etc.
daniel_liu4
Comment 1
2025-01-22 17:09:21 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39416
EWS
Comment 2
2025-01-23 12:52:09 PST
Committed
289312@main
(d653320e619a): <
https://commits.webkit.org/289312@main
> Reviewed commits have been landed. Closing PR #39416 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug