Fix IPInt JITless wasm->wasm and wasm->JS https://bugs.webkit.org/show_bug.cgi?id=286390 rdar://143149120

Reviewed by Yusuke Suzuki.

IPInt had two key things missing which didn't allow it to interface with JITless
Wasm:
- wasm->wasm thunk read LLIntCallees, meaning that IPIntCallee would segfault.
- IPInt's calls didn't store the FunctionInfo* to the call frame, so the wrapper
thunks were unable to find this.

This patch fixes both of the above issues.

* Source/JavaScriptCore/assembler/JITOperationList.cpp:
(JSC::llintOperations):
* Source/JavaScriptCore/bytecode/BytecodeList.rb:
* Source/JavaScriptCore/llint/InPlaceInterpreter64.asm:
* Source/JavaScriptCore/llint/LowLevelInterpreter.asm:
* Source/JavaScriptCore/llint/WebAssembly.asm:
* Source/JavaScriptCore/wasm/WasmEntryPlan.cpp:
(JSC::Wasm::EntryPlan::generateWasmToWasmStubs):
* Source/JavaScriptCore/wasm/WasmIPIntSlowPaths.cpp:
(JSC::IPInt::doWasmCall):
(JSC::IPInt::WASM_IPINT_EXTERN_CPP_DECL):
* Source/JavaScriptCore/wasm/WasmIPIntSlowPaths.h:

Canonical link: https://commits.webkit.org/289312@main