Source/JavaScriptCore/llint/LowLevelInterpreter.asm
@@ -2883,6 +2883,10 @@ op(wasm_to_wasm_wrapper_entry, macro ()
     crash()
 end)
 
+op(wasm_to_wasm_ipint_wrapper_entry, macro ()
+    crash()
+end)
+
 op(wasm_to_js_wrapper_entry, macro ()
     crash()
 end)
